tests/expectations/compiler/libraries/lib_fn_non_const_arg_fail.out
Error [ECMP0376012]: Unable to resolve call to generic function `math_lib::scale`. A non-const expression was provided where a const generic parameter is required.
    --> compiler-test:5:34
     |
   5 |         return math_lib::scale::[n](x);  // n is a runtime variable, not a const
     |                                  ^
